Revert "Bijayini | #1894 | (UI issue) Retrospective button misaligned"
This reverts commit 75377f91e5a1b57f47c1ec6bf570f84c3efc9392.

--- a/ui/app/styles/bahmni-layout/_retroMode.scss
+++ b/ui/app/styles/bahmni-layout/_retroMode.scss
@@ -41,7 +41,7 @@ $retroModeColor:  #0E74AF;
 		background: darken($retroModeColor, 6%);
 	  }
 	}
-      .retro-date-widget-header{
+      .retro-date-widget-wrapper{
         margin-top: 4px !important;
       }
   }
